<resources>
    <string name="app_name">AsilApp</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signup_failed">"Sign Up Failed"</string>
    <string name="profilo">"Profilo"</string>
    <string name="informativa">"Informativa"</string>
    <string name="medbox">"MedBox"</string>
    <string name="patologie">"Patologie"</string>
    <string name="misurazioni">"Misurazioni"</string>
    <string name="utente">"Utente"</string>
    <string name="centro">"CentroDiAccoglienza"</string>
    <string name="luogo">"Luogo"</string>
    <string name="altro">"Altro"</string>
    <string name="strumento">"Strumento"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sezione_informativa">Sezione Informativa</string>
    <string name="connessione_medbox">Connessione Medbox</string>
    <string name="Login">Login</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="data_di_nascita">Data di Nascita</string>
    <string name="Patologie">Patologie</string>
    <string name="Misurazioni">Misurazioni</string>
    <string name="Spese">Spese</string>
    <string name="aggiungi">+</string>
    <string name="Aggiungi">Aggiungi</string>
    <string name="patologia_1">Patologia 1</string>
    <string name="vedi">Vedi</string>
    <string name="aggiorna">Aggiorna</string>
    <string name="cancella">Cancella</string>
    <string name="patologia2">Patologia2</string>
    <string name="misurazione1">Misurazione1</string>
    <string name="misurazione2">Misurazione2</string>
    <string name="Spesa1">Spesa1</string>
    <string name="Spesa2">Spesa2</string>
    <string name="Utente">Utente</string>
    <string name="Centro">Centro</string>
    <string name="Luogo">Luogo</string>
    <string name="Altro">Altro</string>
    <string name="Strumenti">Strumenti</string>
    <string name="Esci">Esci</string>
    <string name="Risultato">Risultato</string>
    <string name="Conferma_la_tua_password">Conferma la tua password</string>
    <string name="Avanti">Avanti</string>
    <string name="Nome">Nome</string>
    <string name="Cognome">Cognome</string>
    <string name="Paese_di_provenienza">Paese di Provenienza</string>
    <string name="Registra">Registra</string>
    <string name="Conferma_password">Conferma Password</string>
    <string name="luogo_di_provenienza">Luogo_di:provenienza</string>
    <string name="Medbox_PIN">Medbox_PIN</string>
    <string name="Nomepatologia">NomePatologia</string>
    <string name="lorem_ipsum">Aggiungi_una_patologia</string>
    <string name="dettagli">Dettagli</string>
    <string name="torna_indietro">Torna Indietro</string>
    <string name="stile_di_vita_salutare">Stile di Vita Salutare</string>
    <string name="altri_documenti_e_riferimenti_utili">Altri Documenti e Riferimenti Utili</string>
    <string name="informazioni_sui_centri_di_accoglienza">Informazioni sui Centri di Accoglienza</string>
    <string name="questo_centro_offre_i_seguenti_servizi_alloggio_pasti_assistenza_sanitaria_e_supporto_legale">Questo centro offre i seguenti servizi: alloggio, pasti, assistenza sanitaria e supporto legale.</string>
    <string name="servizi_offerti">Servizi Offerti:</string>
    <string name="regolamento_e_norme_di_convivenza">Regolamento e Norme di Convivenza:</string>
    <string name="_1_rispetto_reciproco_n2_pulizia_degli_spazi_comuni_n3_rispetto_degli_orari_dei_pasti_n4_collaborazione_con_il_personale">1. Rispetto reciproco\n2. Pulizia degli spazi comuni\n3. Rispetto degli orari dei pasti\n4. Collaborazione con il personale</string>
    <string name="norme_di_buona_convivenza">Norme di Buona Convivenza:</string>
    <string name="_1_rispettare_la_privacy_degli_altri_n2_non_fare_rumore_dopo_le_22_00_n3_segnalare_eventuali_problemi_al_personale">1. Rispettare la privacy degli altri\n2. Non fare rumore dopo le 22:00\n3. Segnalare eventuali problemi al personale</string>
    <string name="questo_centro_ubicato_nel_centro_di_bari_e_offre_diversi_servizi_elencati_qui_sotto">Questo centro è ubicato nel centro di Bari e offre diversi servizi elencati qui sotto</string>
    <string name="alloggio">Alloggio</string>
    <string name="assistenza_sanitaria">Assistenza Sanitaria</string>
    <string name="servizio_pasti">Servizio Pasti</string>
    <string name="assistenza_legale">Assistenza legale</string>
    <string name="supporto_linguistico">Supporto linguistico</string>
    <string name="indietro">Indietro</string>
    <string name="valutazioni">Valutazioni</string>
    <string name="valutaci">Valutaci</string>
    <string name="valuta_il_tuo_centro_di_accoglienza">Valuta il tuo centro di accoglienza</string>
    <string name="dai_un_feedback_descrittivo">Dai un feedback descrittivo</string>
    <string name="valuta_asilapp">Valuta AsilApp</string>
    <string name="invia">Invia</string>
    <string name="plus">+</string>
    <string name="ambito">Ambito</string>
    <string name="data">Data di acquisto</string>
    <string name="data2">Data di misurazione</string>
    <string name="articolo">Articolo</string>
    <string name="costo">Costo</string>
    <string name="salva">Salva</string>
    <string name="nome_patologia">Diabete</string>
    <string name="data_diagnosi">99/99/9999</string>
    <string name="dottore">Dr. Zivago</string>
    <string name="ora">12:00</string>
    <string name="valore">valore</string>
    <string name="pin">Inserisci il PIN</string>
    <string name="invia_pin">Invia PIN</string>
    <string name="attendere">Attendere la risposta dal Medbox...</string>
    <string name="scheda_personale">Scheda Personale</string>
    <string name="Data_acquisto" >Data Acquisto</string>
    <string name="slash">/</string>
    <string name="un_video_esplicativo_sulla_richiesta_di_asilo_come_funziona">Un video esplicativo sulla richiesta di asilo come funziona</string>
    <string name="teacher_s_backdoor">teacher\'s backdoor</string>


    <string-array name="tipologia_array">
        <item>Farmaco</item>
        <item>Alimentari</item>
        <item>Abbigliamento</item>
        <item>Trasporti</item>
        <item>Altro</item>
    </string-array>

    <string-array name="tipologia_per_la_visualizzazione_array">
        <item>Tutto</item>
        <item>Farmaco</item>
        <item>Alimentari</item>
        <item>Abbigliamento</item>
        <item>Trasporti</item>
        <item>Altro</item>
    </string-array>

    <string-array name="metodo_pagamento_array">
        <item>Contante</item>
        <item>Carta di debito</item>
        <item>Bonifico</item>
        <item>Altro</item>
    </string-array>


</resources>
