<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    tools:viewBindingIgnore="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnDettagli"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#000000"
            android:text="@string/dettagli"
            android:textSize="15sp"
            app:layout_constraintRight_toLeftOf="@+id/btnAggiorna"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnAggiorna"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="#000000"
            android:text="@string/aggiorna"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnDettagli" />

        <Button
            android:id="@+id/btnCancella"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="#000000"
            android:text="@string/cancella"
            android:textSize="15sp"
            app:layout_constraintLeft_toRightOf="@+id/btnAggiorna"
            app:layout_constraintTop_toTopOf="@id/btnDettagli"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:text="@string/strumento"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:text="@string/data2"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>