<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnStrumenti"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#000000"
        android:text="@string/Strumenti"
        app:layout_constraintBottom_toTopOf="@+id/txtRisultato"
        app:layout_constraintEnd_toStartOf="@+id/btnEsci"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEsci"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#000000"
        android:text="@string/Esci"
        app:layout_constraintBottom_toTopOf="@+id/txtRisultato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRisultato"
        android:layout_width="345dp"
        android:layout_height="390dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="190dp"
        android:text="@string/Risultato"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>