<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.LoginActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutAnagrafica"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@android:color/white">

    </LinearLayout>
    <ImageView
        android:id="@+id/icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_icon2"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="305dp"
        android:layout_height="55dp"
        android:layout_marginTop="35dp"
        android:ellipsize="end"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:ellipsize="end"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldEmail"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="290dp"
        android:layout_height="53dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#004071"
        android:layout_marginTop="35dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldPassword" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="290dp"
        android:layout_height="53dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#004071"
        android:text="@string/sign_up"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

    <Button
        android:id="@+id/backdoor"
        android:layout_width="290dp"
        android:layout_height="53dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#004071"
        android:text="@string/teacher_s_backdoor"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>
